# ludere

./: .gitignore  pyproject.toml  pytest.ini  setup.py  test.py
ludere/: core.py  reflection.py
tests/: test_basic_features.py
