[tool.poetry]
name = "ludere"
version = "0.1.1"
description = "Toy DI framework"
authors = ["Vlad Smirnov <gnudeb0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
